Update issue templates

--- a/.github/ISSUE_TEMPLATE/バックエンド機能追加.md
+++ b/.github/ISSUE_TEMPLATE/バックエンド機能追加.md
@@ -1,18 +1,10 @@
 ---
-name: 機能追加
+name: バックエンド機能追加
 about: Suggest an idea for this project
 title: ''
-labels: ''
+labels: backend
 assignees: ''
 
----
-
----
-name: 機能追加
-about: 新しい機能を提案するためのテンプレート
-title: "[機能] 機能名"
-labels: enhancement
-assignees: ''
 ---
 
 ## 機能概要
@@ -23,11 +15,10 @@ assignees: ''
 - [ ] タスク2: 詳細説明
 - [ ] タスク3: 詳細説明
 
-## 使用するライブラリ
+## 使用するGem
 <!-- ここに使用する予定のライブラリを記述してください。 -->
-- ライブラリ名1
-- ライブラリ名2
-- ライブラリ名3
+- Gem名
+- Gem名2
 
 ## 追加情報
 <!-- ここに追加情報や参考リンクを記述してください。 -->
