--- a/.github/ISSUE_TEMPLATE/フロント-バグ報告.md
+++ b/.github/ISSUE_TEMPLATE/フロント-バグ報告.md
@@ -1,9 +1,9 @@
 ---
-name: バグ報告
+name: フロント：バグ報告
 about: Create a report to help us improve
 title: ''
-labels: 'bug, help wanted, 優先度: 中, 優先度: 低, 優先度: 高, 進行中'
-assignees: YujiTani
+labels: bug, frontend
+assignees: ''
 
 ---
 
