--- a/.github/ISSUE_TEMPLATE/機能追加.md
+++ b/.github/ISSUE_TEMPLATE/機能追加.md
@@ -1,10 +1,18 @@
 ---
-name: バックエンド機能追加
+name: 機能追加
 about: Suggest an idea for this project
 title: ''
-labels: backend
+labels: ''
 assignees: ''
 
+---
+
+---
+name: 機能追加
+about: 新しい機能を提案するためのテンプレート
+title: "[機能] 機能名"
+labels: enhancement
+assignees: ''
 ---
 
 ## 機能概要
@@ -15,10 +23,11 @@ assignees: ''
 - [ ] タスク2: 詳細説明
 - [ ] タスク3: 詳細説明
 
-## 使用するGem
+## 使用するライブラリ
 <!-- ここに使用する予定のライブラリを記述してください。 -->
-- Gem名
-- Gem名2
+- ライブラリ名1
+- ライブラリ名2
+- ライブラリ名3
 
 ## 追加情報
 <!-- ここに追加情報や参考リンクを記述してください。 -->
